# immutable-c-ollections

./: CMakeLists.txt  champ.c  champ.h  champ_fns.c  champ_fns.h  list.c  list.h  queue.c  queue.h  stm_rc.c  stm_rc.h
Catch_tests/: CMakeLists.txt  catch.cpp  lorem_ipsum_words  test_basic_api.cpp
examples/prod-con/: consumer.c  consumer.h  producer.c  producer.h  scenario.c
